--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
             <a href="./" class="logo">
                 <b>mateus</b>.dev
             </a>
+
+            <button type="button" class="hamburger hamburger--spin">
+                <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                </span>
+            </button>
     
             <ul class="menu">
                 <li>
@@ -53,6 +59,7 @@
                     </a>
                 </li>
             </ul>
+
         </div>
 
     </nav>
