feat: adiciona portfolio

--- a/index.html
+++ b/index.html
@@ -266,18 +266,22 @@
                 Portfólio
             </h1>
 
+            <div class="legenda">
+                <span class="title">* OBS: Por razões contratuais, a grande maioria dos projetos que desenvolvi e/ou participei não foram listados aqui. Pelo mesmo motivo, alguns projetos foram listados sem o código fonte disponível para consulta.</span>
+            </div>
+
             <div class="wrapper">
                 
                 <div class="col">
-                    <img src="dist/img/teste.jpg" alt="" />
+                    <img src="dist/img/2018_TST_ONLINE.png" alt="" />
 
-                    <h2 class="title">E-Commerce Pitylu (TCC)</h2>
+                    <h2 class="title">TST Online <small>&copy;</small></h2>
 
-                    <p class="intro"><b>Período:</b> 2017</p>
+                    <p class="intro"><b>Período:</b> 2018 - 2019</p>
 
-                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS</p>
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v3 e v4, jQuery</p>
 
-                    <a href="#" target="_blank">
+                    <a href="https://sistema.tstonline.com.br/login" target="_blank">
                         Demonstração
                     </a>
 
@@ -287,42 +291,149 @@
                 </div>
 
                 <div class="col">
-                    <img src="dist/img/teste.jpg" alt="" />
+                    <img src="dist/img/2019_AM_TOUR.png" alt="" />
 
-                    <h2 class="title">E-Commerce Pitylu (TCC)</h2>
+                    <h2 class="title">AM Turismo Viagens <small>&copy;</small></h2>
 
-                    <p class="intro"><b>Período:</b> 2017</p>
+                    <p class="intro"><b>Período:</b> 2019</p>
 
-                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS</p>
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v4</p>
 
-                    <a href="#" target="_blank">
+                    <a href="https://mateusdanieel.github.io/am_turismo_viagens/" target="_blank">
                         Demonstração
                     </a>
 
-                    <a href="#" target="_blank">
+                    <a href="https://github.com/MateusDanieel/am_turismo_viagens" target="_blank">
                         Source Code
                     </a>
                 </div>
 
                 <div class="col">
-                    <img src="dist/img/teste.jpg" alt="" />
+                    <img src="dist/img/2019_MAZAL_TI.png" alt="" />
 
-                    <h2 class="title">E-Commerce Pitylu</h2>
+                    <h2 class="title">Mazal TI <small>&copy;</small></h2>
 
-                    <p class="intro"><b>Período:</b> 2017</p>
+                    <p class="intro"><b>Período:</b> 2019</p>
 
-                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS</p>
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v4</p>
 
-                    <a href="#" target="_blank">
+                    <a href="https://mateusdanieel.github.io/mazal_ti/" target="_blank">
                         Demonstração
                     </a>
 
-                    <a href="#" target="_blank">
+                    <a href="https://github.com/MateusDanieel/mazal_ti" target="_blank">
+                        Source Code
+                    </a>
+                </div>
+
+                <div class="col">
+                    <img src="dist/img/2019_TEMPLATE_01.png" alt="" />
+
+                    <h2 class="title">Template Landing</h2>
+
+                    <p class="intro"><b>Período:</b> 2019</p>
+
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v4</p>
+
+                    <a href="https://mateusdanieel.github.io/templates/1" target="_blank">
+                        Demonstração
+                    </a>
+
+                    <a href="https://github.com/MateusDanieel/templates/tree/master/1" target="_blank">
+                        Source Code
+                    </a>
+                </div>
+
+                <div class="col">
+                    <img src="dist/img/2019_TEMPLATE_02.png" alt="" />
+
+                    <h2 class="title">Template Landing</h2>
+
+                    <p class="intro"><b>Período:</b> 2019</p>
+
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v4</p>
+
+                    <a href="https://mateusdanieel.github.io/templates/2" target="_blank">
+                        Demonstração
+                    </a>
+
+                    <a href="https://github.com/MateusDanieel/templates/tree/master/2" target="_blank">
+                        Source Code
+                    </a>
+                </div>
+
+                <div class="col">
+                    <img src="dist/img/2019_TEMPLATE_03.png" alt="" />
+
+                    <h2 class="title">Template Landing</h2>
+
+                    <p class="intro"><b>Período:</b> 2019</p>
+
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v4</p>
+
+                    <a href="https://mateusdanieel.github.io/templates/3" target="_blank">
+                        Demonstração
+                    </a>
+
+                    <a href="https://github.com/MateusDanieel/templates/tree/master/3" target="_blank">
+                        Source Code
+                    </a>
+                </div>
+
+                <div class="col">
+                    <img src="dist/img/2019_TEMPLATE_04.png" alt="" />
+
+                    <h2 class="title">Template Landing</h2>
+
+                    <p class="intro"><b>Período:</b> 2019</p>
+
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v4</p>
+
+                    <a href="https://mateusdanieel.github.io/templates/4" target="_blank">
+                        Demonstração
+                    </a>
+
+                    <a href="https://github.com/MateusDanieel/templates/tree/master/4" target="_blank">
+                        Source Code
+                    </a>
+                </div>
+
+                <div class="col">
+                    <img src="dist/img/2019_PORTFOLIO.png" alt="" />
+
+                    <h2 class="title">Portfólio (Antigo)</h2>
+
+                    <p class="intro"><b>Período:</b> 2019</p>
+
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v4</p>
+
+                    <a href="https://mateusdanieel.github.io/portfolio-antigo/" target="_blank">
+                        Demonstração
+                    </a>
+
+                    <a href="https://github.com/MateusDanieel/portfolio-antigo" target="_blank">
+                        Source Code
+                    </a>
+                </div>
+
+                <div class="col">
+                    <img src="dist/img/2020_COVID_19.png" alt="" />
+
+                    <h2 class="title">Triagem Covid-19</h2>
+
+                    <p class="intro"><b>Período:</b> 2020</p>
+
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v4</p>
+
+                    <a href="https://mateusdanieel.github.io/COVID-19" target="_blank">
+                        Demonstração
+                    </a>
+
+                    <a href="https://github.com/MateusDanieel/COVID-19" target="_blank">
                         Source Code
                     </a>
                 </div>
        
-
             </div>
         </div>
 
