feat: adiciona timeline ao projeto

--- a/index.html
+++ b/index.html
@@ -445,6 +445,85 @@
             <h1 class="sec-title">
                 Timeline - Como me tornei um desenvolvedor?
             </h1>
+
+            <ul class="wrapper">
+                <li class="item">
+                    <h2 class="year">2003</h2>
+                    <p class="intro">Em 2003 eu tive o meu primeiro contato com um computador, isso aconteceu na casa da minha avó. Eu me lembro bem de ter que esperar junto com os meus tios até meia-noite ou finais de semana para usar a internet, anos depois fui descobrir que isso era por conta da internet discada.</p>
+                </li>
+
+                <li class="item">
+                    <h2 class="year">2004</h2>
+                    <p class="intro">Meu pai e meu irmão se juntaram para comprar o nosso primeiro PC, e até hoje ainda lembro das configurações: um AMD Athlon equivalente ao Pentium III, com 256 MB de memória RAM, essa máquina durou até meados de 2010 ainda.</p>
+                </li>
+
+                <li class="item">
+                    <h2 class="year">2005</h2>
+                    <p class="intro">Empolgado pela aquisição do nosso computador, eu fiz um curso básico de informática em um Telecentro da região. Lá eu tive aulas de digitação e aprendi a utilizar algumas ferramentas básicas, também tive meu primeiro contato com um sistema operacional baseado em Linux.</p>
+                </li>
+
+                <li class="item">
+                    <h2 class="year">2007</h2>
+                    <p class="intro">Apesar de ter um computador desde 2004, só fui ter acesso a internet em casa no ano de 2007 (que coisa, não?).</p>
+                </li>
+
+                <li class="item">
+                    <h2 class="year">2008</h2>
+                    <p class="intro">Junto com meu irmão montamos um computador por conta própria, adquirindo peça por peça e básicamente usando apenas "sucata". Essa máquina ficou para mim usar e nunca vou esquecer ela: um poderosíssimo processador Intel Pentium II, incríveis 128 MB de memória RAM e um HD com maravilhosos 12 GB de memória.</p>
+                </li>
+
+                <li class="item">
+                    <h2 class="year">2008 - 2010</h2>
+                    <p class="intro">Em 2008, por influência de um colega da escola, comecei a me interessar por criar blogs. Eu procurava falar sobre coisas que eu gostava, sem me importar muito com a quantidade de visualizações. E foi aí que eu tive meu primeiro contato com o HTML e o CSS, porém não tinha a mínima noção do que estava acontecendo, eu só apagava umas coisas aqui, mudava outras de lugar ali até que uma hora funcionava.</p>
+
+                    <p class="intro">Em 2009, comecei a fazer alguns trabalhos de montagem e manutenção de computadores.</p>
+                </li>
+
+                <li class="item">
+                    <h2 class="year">2010 - 2013</h2>
+                    <p class="intro">Em 2010 eu já tinha plena certeza que queria trabalhar com TI, só não sabia em qual segmento. Nesse mesmo ano meu irmão começou a cursar Análise e Desenvolvimento de Sistemas e tenho que admitir que ele teve certa influência na minha escolha (parcialmente, mas teve). Eu ainda continuava com os meus blogs, porém com um foco totalmente diferente, agora voltado em divulgar meus trabalhos com mods/patches para games, e foi ai que eu aprendi básicamente tudo o que eu sei sobre Photoshop até hoje. Esse blog teve uma boa visibilidade, o que me fez entrar para uma equipe de edição na época e receber convites de outras, mas sempre foi por hobby, nunca fomos remunerados por isso. Não tive coragem de apagar esse blog, mesmo depois de ter parado de atualizar ele em 2013, me trás ótimas lembranças e ele pode ser visto clicando <a href="http://kitsbymateus.blogspot.com.br/" target="_blank">aqui</a> (ignorem a vergonha alheia em algumas publicações).</p>
+                </li>
+
+                <li class="item">
+                    <h2 class="year">2013</h2>
+                    <p class="intro">Com um pouco mais de conhecimento e sem precisar do auxílio do meu irmão dessa vez, eu montei um PC "Gamer" pra mim. Com um processador/APU AMD A8 3870K que vinha com uma GPU Radeon HD6550D integrada, 8 GB de RAM DDR3 e HD de 500 GB. Ainda tenho e uso esse PC até os dias atuais, porém ele passou por dois pequenos upgrades em 2016 e em 2018. Conseguir montar meu próprio PC foi uma grande conquista pessoal.</p>
+                </li>
+
+                <li class="item">
+                    <h2 class="year">2015</h2>
+                    <p class="intro">À essa altura da minha vida, no último ano do ensino médio e trabalhando como estagiário em uma loja de roupas infantis, eu já estava decidido que queria trabalhar com TI há alguns anos. E meu primeiro passo foi estipular como meta passar no vestibular da ETEC para o curso Técnico em Informática. Infelizmente nem tudo são flores, prestei o vestibular no final do ano e por pouco não consegui uma das 40 vagas disponíveis.</p>
+                </li>
+
+                <li class="item">
+                    <h2 class="year">2016</h2>
+                    <p class="intro">Estudei a primeira metade do ano para prestar o vestibular para o curso Técnico em Informática da ETEC para o 2º semestre, e dessa vez eu consegui passar com certa facilidade. Foi uma enorme vitória pessoal.</p>
+                </li>
+
+                <li class="item">
+                    <h2 class="year">2016 - 2017</h2>
+                    <p class="intro">Após 1 ano e meio de curso, me formei como Técnico em Informática pela ETEC. O curso abrange muitas áreas, e a matéria que despertou meu interesse logo de cara foi Técnicas de Programação para Internet, que nada mais era que uma sequência de aulas sobre Desenvolvimento Web. Nessa matéria finalmente aprendi HTML e CSS de fato, e também um pouco de PHP, JavaScript e jQuery. O meu grupo ficou encarregado de desenvolver um e-commerce para a loja de roupas que eu trabalhava na época como TCC, com stack voltado para HTML, CSS, JS, jQuery e PHP. Eu e mais um dos membros do grupo ficamos responsáveis pelo front-end e pelo web design do sistema, enquanto os outros dois desenvolveram a parte back-end, mas a gente sempre dava pitacos no back e vice-versa. Conseguimos entregar o projeto de maneira satisfatória e apresentar para os professores com sucesso. A partir desse momento eu tive a plena certeza de que tinha me encontrado profissionalmente: "quero me tornar um desenvolvedor front-end!".</p>
+                </li>
+
+                <li class="item">
+                    <h2 class="year">2018</h2>
+                    <p class="intro">Ainda sem poder arriscar a estabilidade do meu emprego como balconista, optei por utilizar meu tempo livre para dedicar a minha carreira de desenvolvedor, me desdobrando para buscar demandas e estudar ao mesmo tempo, mas tudo deu certo. Em Abril de 2018 apareceu minha primeira oportunidade de trabalhar em um grande projeto, e foi aí que eu participei do desenvolvimento do sistema TST ONLINE, junto com 2 dos meus 3 parceiros de TCC. Atuei como o único front-end do projeto, mas recebi ajudas e dicas dos outros desenvolvedores em relação ao design, afinal eu ainda era bem inexperiente. Nesse projeto eu era responsável pela criação do conceito e desenvolvimento de todas as telas do sistema (páginas, formulários, relatórios, entre outras coisas).</p>
+
+                    <p class="intro">Foi ficando difícil conciliar meu emprego com o projeto, o que fez com que eu pedisse demissão no final do ano para me dedicar totalmente como desenvolvedor.</p>
+                </li>
+
+                <li class="item">
+                    <h2 class="year">2019</h2>
+                    <p class="intro">Com a participação no desenvolvimento de um grande sistema no meu portfólio, isso abriu a possibilidade de trabalhar em mais alguns projetos. Foi também um período de muito estudo, networking com outros desenvolvedores e participação em alguns eventos. Finalizei o ano em busca de uma oportunidade para atuar como desenvolvedor no mercado, para adquirir mais experiência, aplicar meus conhecimentos e me consolidar de vez como um desenvolvedor de fato.</p>
+                </li>
+
+                <li class="item">
+                    <h2 class="year">2020</h2>
+                    <p class="intro">Após alguns dias de muitas entrevistas e ligações, enfim eu consegui uma oportunidade para atuar no mercado. Fui contratado como desenvolvedor front-end júnior pela Tritone Interactive, e até o momento tem sido uma experiência de muito aprendizado. Logo de cara eu já tinha gostado do ambiente, e também fui extremamente bem recebido pelos colaboradores da empresa. Em poucas semanas, conheci novas tecnologias que me ajudaram a melhorar e otimizar (e muito!) o meu trabalho.</p>
+
+                    <p class="intro">Em meados de Julho ingressei no curso de especialização em desenvolvimento de aplicativos para smartphone da ETEC, o qual concluí em Dezembro de 2020 mesmo. Lá aprendi um pouco de Flutter e desenvolvi alguns apps nesse período.
+                        Sempre gostei e tinha curiosidade de aprender um pouco de mobile, graças a ETEC eu pude ter uma boa introdução para esse mundo.</p>
+                </li>
+            </ul>
         </div>
 
     </section>
