--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="wrapper">
                 <h3 class="funct">Front-End Developer</h3>
 
-                <h1 class="title typewrite" data-period="2000" data-type='[ "Dev Mateus Daniel" ]'></h1>
+                <h1 class="title typewrite" data-period="2000" data-type='[ "Mateus Daniel" ]'></h1>
 
                 <h2 class="intro">Desenvolvedor web front-end de São Paulo - SP.</h2>
 
@@ -145,7 +145,7 @@
                 <h1 class="sec-title">Quem Sou Eu?</h1>
 
                 <p class="intro">
-                    Muito prazer, meu nome é Mateus Daniel, tenho 24 anos, nascido e criado na cidade de São Paulo - SP.<br /><br />
+                    Muito prazer, meu nome é Mateus Daniel, tenho <span id="js-age"></span> anos, nascido e criado na cidade de São Paulo - SP.<br /><br />
 
                     Sou formado como Técnico em Informática (o curso atualmente é conhecido como Técnico em Desenvolvimento de Sistemas) pela Escola Técnica Estadual de São Paulo - ETEC, desde 2017, com especialização em Desenvolvimento de Aplicativos para Smartphones em 2020.<br /><br />
 
@@ -633,7 +633,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p class="intro">COPYRIGHT © 2021 - MATEUS DANIEL</p>
+            <p class="intro">COPYRIGHT © <span id="js-year"></span> - MATEUS DANIEL</p>
         </div>
     </footer>
 
