--- a/index.html
+++ b/index.html
@@ -611,7 +611,8 @@
                 </h1>
 
                 <p class="intro">
-                    Para me enviar uma mensagem preencha o formulário abaixo. Irei retornar assim que possível! ;)
+                    Para me enviar uma mensagem preencha o formulário abaixo. <br />
+                    Irei retornar assim que possível! :D
                 </p>
 
                 <input type="email" name="email" placeholder="Seu e-mail" required />
