feat: adiciona e-mail entre os links de redes sociais

--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@
 
                 <ul class="social">
                     <li>
+                        <a href="mailto:mateusdaniel.dev@gmail.com" target="_blank" title="E-mail">
+                            <i class="fas fa-envelope-open-text fa-2x"></i>
+                        </a>
+                    </li>
+
+                    <li>
                         <a href="https://bitbucket.org/MateusDanieel/" target="_blank" title="BitBucket">
                             <i class="fab fa-bitbucket fa-2x"></i>
                         </a>
@@ -535,6 +541,17 @@
             <div class="esq">
 
                 <ul class="social">
+                    <li>
+                        <a href="mailto:mateusdaniel.dev@gmail.com" target="_blank">
+                            <i class="fas fa-envelope-open-text fa-2x"></i>
+
+                            <div class="wrapper">
+                                <h2 class="title">E-mail</h2>
+                                <p class="intro">mateusdaniel.dev@gmail.com</p>
+                            </div>
+                        </a>
+                    </li>
+
                     <li>
                         <a href="https://bitbucket.org/MateusDanieel/" target="_blank">
                             <i class="fab fa-bitbucket fa-2x"></i>
