--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Desenvolvedor Front-End | Mateus Daniel</title>
     <meta name="description" content="Desenvolvedor Front-End (Front End Developer) de São Paulo - SP.">
-    <meta name="keywords" content="Mateus Daniel, Desenvolvedor Front-End, Front-End Developer, Web Designer, Programador, Dev, Front End Developer, Desenvolvedor Front-End, Técnico em Informática, Web Developer, Desenvolvedor Web, Programador, Montagem e Manutenção de Computadores, Kits by Mateus">
+    <meta name="keywords" content="Mateus Daniel, Desenvolvedor Front-End, Front-End Developer, Web Designer, Programador, Dev, Front End Developer, Desenvolvedor Front End, Técnico em Informática, Web Developer, Desenvolvedor Web, Programador, Montagem e Manutenção de Computadores, Kits by Mateus, JavaScript Developer, JS, JavaScript, HTML, CSS">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Desenvolvedor Front-End | Mateus Daniel">
     <meta property="og:type" content="website">
