--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <title>Desenvolvedor Front-End | Mateus Daniel</title>
     <meta name="description" content="Desenvolvedor Front-End (Front End Developer) de São Paulo - SP.">
-    <meta name="keywords" content="Mateus Daniel, Desenvolvedor Front-End, Front-End Developer, Web Designer, Programador, Dev, Front End Developer, Desenvolvedor Front End, Técnico em Informática, Web Developer, Desenvolvedor Web, Programador, Montagem e Manutenção de Computadores, Kits by Mateus, JavaScript Developer, JS, JavaScript, HTML, CSS">
+    <meta name="keywords" content="Mateus Daniel, Mateus Daniel Desenvolvedor Front-End, Mateus Daniel Front-End Developer, Web Designer, Mateus Daniel Programador, Mateus Daniel Dev, Mateus Daniel Front End Developer, Mateus Daniel Desenvolvedor Front End, Mateus Daniel Técnico em Informática, Mateus Daniel Web Developer, Mateus Daniel Desenvolvedor Web, Programador, Montagem e Manutenção de Computadores, Kits by Mateus, JavaScript Developer, JS, JavaScript, HTML, CSS">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Desenvolvedor Front-End | Mateus Daniel">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://mateusdanieel.github.io/">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="dist/img/profile.jpg">
     <link rel="manifest" href="site.webmanifest">
     <link rel="apple-touch-icon" href="icon.png">
     <!--[if IE]><link rel="shortcut icon" href="favicon.ico"><![endif]-->
