fix: corrige portfolio

--- a/index.html
+++ b/index.html
@@ -277,6 +277,24 @@
             </div>
 
             <div class="wrapper">
+
+                <div class="col">
+                    <img src="dist/img/2017_TCC_PTL.png" alt="" />
+
+                    <h2 class="title">Pitylu Kids <small>&copy;</small> (TCC)</h2>
+
+                    <p class="intro"><b>Período:</b> 2016 - 2017</p>
+
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, jQuery, PHP</p>
+
+                    <a href="./dist/img/2017_TCC_PTL_INDEX.png" target="_blank">
+                        Demonstração
+                    </a>
+
+                    <a href="https://github.com/MateusDanieel/tcc-etec-ptl" target="_blank">
+                        Source Code
+                    </a>
+                </div>
                 
                 <div class="col">
                     <img src="dist/img/2018_TST_ONLINE.png" alt="" />
@@ -429,13 +447,31 @@
 
                     <p class="intro"><b>Período:</b> 2020</p>
 
-                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v4</p>
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v4, Sass (SCSS)</p>
 
                     <a href="https://mateusdanieel.github.io/COVID-19" target="_blank">
                         Demonstração
                     </a>
 
                     <a href="https://github.com/MateusDanieel/COVID-19" target="_blank">
+                        Source Code
+                    </a>
+                </div>
+
+                <div class="col">
+                    <img src="dist/img/2021_PORTFOLIO.png" alt="" />
+
+                    <h2 class="title">Portfólio (Novo)</h2>
+
+                    <p class="intro"><b>Período:</b> 2021</p>
+
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Sass (SCSS)</p>
+
+                    <a href="https://mateusdanieel.github.io/" target="_blank">
+                        Demonstração
+                    </a>
+
+                    <a href="https://github.com/MateusDanieel/MateusDanieel.github.io" target="_blank">
                         Source Code
                     </a>
                 </div>
