feat: adiciona mais itens ao portfolio

--- a/index.html
+++ b/index.html
@@ -315,6 +315,24 @@
                 </div>
 
                 <div class="col">
+                    <img src="dist/img/2019_CONDUAPP.png" alt="" />
+
+                    <h2 class="title">Conduapp Online <small>&copy;</small></h2>
+
+                    <p class="intro"><b>Período:</b> 2019</p>
+
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v4, PHP</p>
+
+                    <a href="dist/img/2019_CONDUAPP_LAYOUT.png" target="_blank">
+                        Demonstração
+                    </a>
+
+                    <a href="#" target="_blank">
+                        Source Code
+                    </a>
+                </div>
+
+                <div class="col">
                     <img src="dist/img/2019_AM_TOUR.png" alt="" />
 
                     <h2 class="title">AM Turismo Viagens <small>&copy;</small></h2>
@@ -418,6 +436,24 @@
                     </a>
 
                     <a href="https://github.com/MateusDanieel/templates/tree/master/4" target="_blank">
+                        Source Code
+                    </a>
+                </div>
+
+                <div class="col">
+                    <img src="dist/img/2019_PIZZARIA.png" alt="" />
+
+                    <h2 class="title">Sistema Pizzaria</h2>
+
+                    <p class="intro"><b>Período:</b> 2019</p>
+
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v4, PHP</p>
+
+                    <a href="dist/img/2019_PIZZARIA_LAYOUT.png" target="_blank">
+                        Demonstração
+                    </a>
+
+                    <a href="#" target="_blank">
                         Source Code
                     </a>
                 </div>
