feat: adiciona projetos ao portfólio e corrige line-clamp

--- a/index.html
+++ b/index.html
@@ -273,7 +273,11 @@
             </h1>
 
             <div class="legenda">
-                <span class="title">* OBS: Por razões contratuais, a grande maioria dos projetos que desenvolvi e/ou participei não foram listados aqui. Pelo mesmo motivo, alguns projetos foram listados sem o código fonte disponível para consulta.</span>
+                <span class="title">
+                    * OBS: Por razões contratuais, a grande maioria dos projetos que desenvolvi e/ou participei não foram listados aqui. Pelo mesmo motivo, alguns projetos foram listados sem o código fonte disponível para consulta.<br /><br />
+
+                    * OBS²: Algumas imagens foram ocultadas para preservar o sigilo de informações ainda não divulgadas ao público pelo cliente.
+                </span>
             </div>
 
             <div class="wrapper">
@@ -285,7 +289,7 @@
 
                     <p class="intro"><b>Período:</b> 2016 - 2017</p>
 
-                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, jQuery, PHP</p>
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, jQuery, PHP, UX/UI</p>
 
                     <a href="./dist/img/2017_TCC_PTL_INDEX.png" target="_blank">
                         Demonstração
@@ -303,7 +307,7 @@
 
                     <p class="intro"><b>Período:</b> 2018 - 2019</p>
 
-                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v3 e v4, jQuery</p>
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap, jQuery, UX/UI</p>
 
                     <a href="https://sistema.tstonline.com.br/login" target="_blank">
                         Demonstração
@@ -321,7 +325,7 @@
 
                     <p class="intro"><b>Período:</b> 2019</p>
 
-                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v4, PHP</p>
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap, UX/UI</p>
 
                     <a href="dist/img/2019_CONDUAPP_LAYOUT.png" target="_blank">
                         Demonstração
@@ -339,7 +343,7 @@
 
                     <p class="intro"><b>Período:</b> 2019</p>
 
-                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v4</p>
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap, UX/UI</p>
 
                     <a href="https://mateusdanieel.github.io/am_turismo_viagens/" target="_blank">
                         Demonstração
@@ -357,7 +361,7 @@
 
                     <p class="intro"><b>Período:</b> 2019</p>
 
-                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v4</p>
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap, UX/UI</p>
 
                     <a href="https://mateusdanieel.github.io/mazal_ti/" target="_blank">
                         Demonstração
@@ -369,13 +373,103 @@
                 </div>
 
                 <div class="col">
-                    <img src="dist/img/2019_TEMPLATE_01.png" alt="" />
+                    <img src="dist/img/2019_SYS_CLASSIFICADOS_THUMB.png" alt="" />
 
-                    <h2 class="title">Template Landing</h2>
+                    <h2 class="title">Classificados</h2>
 
                     <p class="intro"><b>Período:</b> 2019</p>
 
-                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v4</p>
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap, UX/UI</p>
+
+                    <a href="dist/img/2019_SYS_CLASSIFICADOS.png" target="_blank">
+                        Demonstração
+                    </a>
+
+                    <a href="#" target="_blank">
+                        Source Code
+                    </a>
+                </div>
+
+                <div class="col">
+                    <img src="dist/img/2019_SYS_GESTAO_EMP_LANDING_THUMB.png" alt="" />
+
+                    <h2 class="title">Landing Sistema de Gestão</h2>
+
+                    <p class="intro"><b>Período:</b> 2019</p>
+
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap, UX/UI</p>
+
+                    <a href="dist/img/2019_SYS_GESTAO_EMP_LANDING.png" target="_blank">
+                        Demonstração
+                    </a>
+
+                    <a href="#" target="_blank">
+                        Source Code
+                    </a>
+                </div>
+
+                <div class="col">
+                    <img src="dist/img/2019_SYS_GESTAO_EMP.png" alt="" />
+
+                    <h2 class="title">Sistema de Gestão</h2>
+
+                    <p class="intro"><b>Período:</b> 2019</p>
+
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap, UX/UI</p>
+
+                    <a href="dist/img/2019_SYS_GESTAO_EMP.png" target="_blank">
+                        Demonstração
+                    </a>
+
+                    <a href="#" target="_blank">
+                        Source Code
+                    </a>
+                </div>
+
+                <div class="col">
+                    <img src="dist/img/2019_SYS_VAGAS_EMP_LANDING_THUMB.png" alt="" />
+
+                    <h2 class="title">Landing Vagas de Emprego</h2>
+
+                    <p class="intro"><b>Período:</b> 2019</p>
+
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap, UX/UI</p>
+
+                    <a href="dist/img/2019_SYS_VAGAS_EMP_LANDING.png" target="_blank">
+                        Demonstração
+                    </a>
+
+                    <a href="#" target="_blank">
+                        Source Code
+                    </a>
+                </div>
+
+                <div class="col">
+                    <img src="dist/img/2019_SYS_VAGAS_EMP.png" alt="" />
+
+                    <h2 class="title">Vagas de Emprego</h2>
+
+                    <p class="intro"><b>Período:</b> 2019</p>
+
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap, UX/UI</p>
+
+                    <a href="dist/img/2019_SYS_VAGAS_EMP.png" target="_blank">
+                        Demonstração
+                    </a>
+
+                    <a href="#" target="_blank">
+                        Source Code
+                    </a>
+                </div>
+
+                <div class="col">
+                    <img src="dist/img/2019_TEMPLATE_01.png" alt="" />
+
+                    <h2 class="title">Template para Landing</h2>
+
+                    <p class="intro"><b>Período:</b> 2019</p>
+
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap, UX/UI</p>
 
                     <a href="https://mateusdanieel.github.io/templates/1" target="_blank">
                         Demonstração
@@ -389,11 +483,11 @@
                 <div class="col">
                     <img src="dist/img/2019_TEMPLATE_02.png" alt="" />
 
-                    <h2 class="title">Template Landing</h2>
+                    <h2 class="title">Template para Landing</h2>
 
                     <p class="intro"><b>Período:</b> 2019</p>
 
-                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v4</p>
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap, UX/UI</p>
 
                     <a href="https://mateusdanieel.github.io/templates/2" target="_blank">
                         Demonstração
@@ -407,11 +501,11 @@
                 <div class="col">
                     <img src="dist/img/2019_TEMPLATE_03.png" alt="" />
 
-                    <h2 class="title">Template Landing</h2>
+                    <h2 class="title">Template para Landing</h2>
 
                     <p class="intro"><b>Período:</b> 2019</p>
 
-                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v4</p>
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap, UX/UI</p>
 
                     <a href="https://mateusdanieel.github.io/templates/3" target="_blank">
                         Demonstração
@@ -425,11 +519,11 @@
                 <div class="col">
                     <img src="dist/img/2019_TEMPLATE_04.png" alt="" />
 
-                    <h2 class="title">Template Landing</h2>
+                    <h2 class="title">Template para Landing</h2>
 
                     <p class="intro"><b>Período:</b> 2019</p>
 
-                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v4</p>
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap, UX/UI</p>
 
                     <a href="https://mateusdanieel.github.io/templates/4" target="_blank">
                         Demonstração
@@ -443,11 +537,11 @@
                 <div class="col">
                     <img src="dist/img/2019_PIZZARIA.png" alt="" />
 
-                    <h2 class="title">Sistema Pizzaria</h2>
+                    <h2 class="title">Sistema para Pizzaria</h2>
 
                     <p class="intro"><b>Período:</b> 2019</p>
 
-                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v4, PHP</p>
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap, UX/UI</p>
 
                     <a href="dist/img/2019_PIZZARIA_LAYOUT.png" target="_blank">
                         Demonstração
@@ -463,9 +557,9 @@
 
                     <h2 class="title">Portfólio (Antigo)</h2>
 
-                    <p class="intro"><b>Período:</b> 2019</p>
+                    <p class="intro"><b>Período:</b> 2019 - 2021</p>
 
-                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v4</p>
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap, UX/UI</p>
 
                     <a href="https://mateusdanieel.github.io/portfolio-antigo/" target="_blank">
                         Demonstração
@@ -483,7 +577,7 @@
 
                     <p class="intro"><b>Período:</b> 2020</p>
 
-                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap v4, Sass (SCSS)</p>
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap, Sass (SCSS), UX/UI</p>
 
                     <a href="https://mateusdanieel.github.io/COVID-19" target="_blank">
                         Demonstração
@@ -499,9 +593,9 @@
 
                     <h2 class="title">Portfólio (Novo)</h2>
 
-                    <p class="intro"><b>Período:</b> 2021</p>
+                    <p class="intro"><b>Período:</b> 2021 - ATUAL</p>
 
-                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Sass (SCSS)</p>
+                    <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Sass (SCSS), UX/UI</p>
 
                     <a href="https://mateusdanieel.github.io/" target="_blank">
                         Demonstração
