chore: corrige keywords, adiciona border-radius na TL

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Desenvolvedor Front-End | Mateus Daniel</title>
     <meta name="description" content="Desenvolvedor Front-End (Front End Developer) de São Paulo - SP.">
-    <meta name="keywords" content="Mateus Daniel, Mateus Daniel Desenvolvedor Front-End, Mateus Daniel Front-End Developer, Web Designer, Mateus Daniel Programador, Mateus Daniel Dev, Mateus Daniel Front End Developer, Mateus Daniel Desenvolvedor Front End, Mateus Daniel Técnico em Informática, Mateus Daniel Web Developer, Mateus Daniel Desenvolvedor Web, Programador, Montagem e Manutenção de Computadores, Kits by Mateus, JavaScript Developer, JS, JavaScript, HTML, CSS">
+    <meta name="keywords" content="Mateus Daniel, Mateus Daniel Desenvolvedor Front-End, Mateus Daniel Desenvolvedor, Mateus Daniel Front-End Developer, Web Designer, Mateus Daniel Programador, Mateus Daniel Dev, Mateus Daniel Front End Developer, Mateus Daniel Desenvolvedor Front End, Mateus Daniel Técnico em Informática, Mateus Daniel Web Developer, Mateus Daniel Desenvolvedor Web, Programador, Montagem e Manutenção de Computadores, Kits by Mateus, JavaScript Developer, JS, JavaScript, HTML, CSS, Tritone, Mazal TI">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Desenvolvedor Front-End | Mateus Daniel">
     <meta property="og:type" content="website">
