feat: adiciona links para o Facebook e Instagram

--- a/index.html
+++ b/index.html
@@ -107,6 +107,18 @@
                             <i class="fas fa-envelope-open-text fa-2x"></i>
                         </a>
                     </li>
+                  
+                    <li>
+                        <a href="https://facebook.com/mateusdaniel.dev" target="_blank" title="Facebook">
+                            <i class="fab fa-facebook-f fa-2x"></i>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://instagram.com/mateusdaniel.dev" target="_blank" title="Instagram">
+                            <i class="fab fa-instagram fa-2x"></i>
+                        </a>
+                    </li>
 
                     <li>
                         <a href="https://bitbucket.org/MateusDanieel/" target="_blank" title="BitBucket">
@@ -714,6 +726,28 @@
                             <div class="wrapper">
                                 <h2 class="title">E-mail</h2>
                                 <p class="intro">mateusdaniel.dev@gmail.com</p>
+                            </div>
+                        </a>
+                    </li>
+                  
+                    <li>
+                        <a href="https://facebook.com/mateusdaniel.dev" target="_blank">
+                            <i class="fab fa-facebook fa-2x"></i>
+
+                            <div class="wrapper">
+                                <h2 class="title">Facebook</h2>
+                                <p class="intro">/mateusdaniel.dev</p>
+                            </div>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://instagram.com/mateusdaniel.dev" target="_blank">
+                            <i class="fab fa-instagram fa-2x"></i>
+
+                            <div class="wrapper">
+                                <h2 class="title">Instagram</h2>
+                                <p class="intro">@mateusdaniel.dev</p>
                             </div>
                         </a>
                     </li>
