chore: corrige url de item do portfólio.

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 
                     <p class="intro"><b>Stacks:</b> HTML, CSS, JS, Bootstrap, UX/UI</p>
 
-                    <a href="https://mateusdanieel.github.io/mazal_ti/" target="_blank">
+                    <a href="https://mazalti.com.br/" target="_blank">
                         Demonstração
                     </a>
 
