--- a/index.html
+++ b/index.html
@@ -1195,7 +1195,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p class="intro">COPYRIGHT © <span id="js-year"></span> - MATEUS DANIEL</p>
+            <p class="intro">COPYRIGHT © 2018 - <span id="js-year"></span> | MATEUS DANIEL</p>
         </div>
     </footer>
 
